2012-07-04 Stefanie Adomeit <stefanie.adomeit@cern.ch>

	* Added LikelihoodTopAllHadronic + InterfaceOutput_Allhadronic, InterfaceD3PD_Allhadronic 
	* Added allhadronic example code in examples/top_allhadronic
	* Permutations.cxx/.h: additional method to remove invariant top1<->top2 permutations for allhadronic likelihood
	* tag KLFitter-00-05-16


2012-06-18 Boris lemmer <boris.lemmer@phys.uni-goettingen.de>

	* LikelihoodTTHLeptonJets: Remove higgs mass parameter if no fixed higgs mass is used.
	* tag KLFitter-00-05-15

2012-06-18 Olaf Nackenhorst, Boris lemmer <olaf.nackenhorst@phys.uni-goettingen.de boris.lemmer@phys.uni-goettingen.de>

	* LikelihoodTTHLeptonJets: turn off mass term in LH if not using fixed higgs mass
	* tag KLFitter-00-05-14

2012-06-07 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* included and adapted LikelihoodSgTopWtLJ class as developed by Thomas Loddenkoetter
      library/src/LikelihoodSgTopWtLJ.cxx
      library/include/LikelihoodSgTopWtLJ.h
	* tag KLFitter-00-05-13

2012-06-05 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* Changed interfaces to be ready for BAT-0.9
	* WARNING: version is incompatible with BAT versions earlier than 0.9!
	* Likelihood*.cxx/.h: parameter vector is now passed as constant reference.
	* LikelihoodTopLeptonJets_JetAngles.cxx: Copy of parameters that need to be modified.
	* tag KLFitter-00-05-12

2012-06-05 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* Included transfer functions for MC11c
	* tag KLFitter-00-05-11

2012-05-25 Leonid Serkin <lserkin@cern.ch>

	* Added LikelihoodTTHLeptonJets
	* tag KLFitter-00-05-10

2012-04-24 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* ResDoubleGaussE_1: Removed warnings.
	* tag KLFitter-00-05-09

2012-04-18 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* ResDoubleGaussE_1: Implemented a protection against unstable KLFitter states caused by jets with energies far off the TF validation range.
	* tag KLFitter-00-05-08
