@@ -331,7 +331,6 @@ int KLFitter::InterfaceD3PD_Allhadronic::FillParticles()
         fParticles->AddParticle(tlv_tmp, jet_deteta->at(i), KLFitter::Particles::kParton, "", i, isTagged, fBtagEff, fBtagRej, KLFitter::Particles::kNone, jet_flavor_weight_JetFitterCOMBNN->at(i));
     delete tlv_tmp;
 	}
-	std::sort(fParticles->ParticleContainer(KLFitter::Particles::kParton)->begin(),  fParticles->ParticleContainer(KLFitter::Particles::kParton)->end() , KLFitter::Particles::PtOrder);
 
 	
      //fill electrons  
@@ -349,7 +348,6 @@ int KLFitter::InterfaceD3PD_Allhadronic::FillParticles()
     fParticles->AddParticle(tlv_tmp, el_deteta->at(i), KLFitter::Particles::kElectron, "", i);
     delete tlv_tmp;
 	}
-	std::sort(fParticles->ParticleContainer(KLFitter::Particles::kElectron)->begin(),  fParticles->ParticleContainer(KLFitter::Particles::kElectron)->end() , KLFitter::Particles::PtOrder);
 
   // fill muons
   for (int i = 0; i < mu_n; ++i){
@@ -366,7 +364,6 @@ int KLFitter::InterfaceD3PD_Allhadronic::FillParticles()
     fParticles->AddParticle(tlv_tmp, mu_eta->at(i), KLFitter::Particles::kMuon, "", i);
     delete tlv_tmp;
   }
-	std::sort(fParticles->ParticleContainer(KLFitter::Particles::kMuon)->begin(),  fParticles->ParticleContainer(KLFitter::Particles::kMuon)->end() , KLFitter::Particles::PtOrder);
 	
   // check if input is Signal MC
   if (!fFlagWriteSignalMCTruth)
